final switch before migrating to nixos fully

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -185,7 +185,7 @@ bind = $mainMod, E, exec, kitty -e xplr
 bind = $mainMod, G, exec, kitty -e gemini
 bind = $mainMod, O, exec, zeditor
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, TAB, exec, $menu
+bind = $mainMod, M, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
 
