--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -247,4 +247,5 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 windowrulev2 = opacity 0.8 0.6, class:^(kitty)$
 windowrulev2 = opacity 0.8 0.6, class:^(zen-beta)$
+windowrulev2 = opacity 0.8 0.6, class:^(dev.zed.Zed)$
 
