--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -184,7 +184,8 @@ bind = $mainMod, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdow
 bind = $mainMod, E, exec, kitty -e xplr
 bind = $mainMod, G, exec, kitty -e gemini
 bind = $mainMod, O, exec, zeditor
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, fullscreen
+bind = $mainMod, V, togglefloating
 bind = $mainMod, M, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
