--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ $fileManager = xplr
 $browser = zen
 $steam = steam
 $menu = rofi -show drun
+$editor =  zeditor
 
 
 ########################################
@@ -183,7 +184,7 @@ bind = $mainMod, BACKSPACE, killactive,
 bind = $mainMod, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, kitty -e xplr
 bind = $mainMod, G, exec, kitty -e gemini
-bind = $mainMod, O, exec, zeditor
+bind = $mainMod, O, exec, $editor
 bind = $mainMod, F, fullscreen
 bind = $mainMod, V, togglefloating
 bind = $mainMod, M, exec, $menu
