--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,7 +3,20 @@
 # Detects monitors automatically and sets
 # preferred resolution, refresh rate, and position.
 ########################################
-monitor=,preferred,auto,1
+monitor=HDMI-A-1,1366x768,0x0,1
+monitor=DVI-D-1,1024x768,1366x0,1
+
+# Assign workspaces to specific monitors
+workspace=HDMI-A-1,1
+workspace=DVI-D-1,2
+workspace=HDMI-A-1,3
+workspace=DVI-D-1,4
+workspace=HDMI-A-1,5
+workspace=DVI-D-1,6
+workspace=HDMI-A-1,7
+workspace=DVI-D-1,8
+workspace=HDMI-A-1,9
+workspace=DVI-D-1,10
 
 
 ########################################
@@ -190,6 +203,10 @@ bind = $mainMod, V, togglefloating
 bind = $mainMod, M, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
+
+# Switch focus between monitors
+bind = $mainMod, H, focusmonitor, HDMI-A-1
+bind = $mainMod, semicolon, focusmonitor, DVI-D-1
 
 # Skip to next wallpaper
 bind = $mainMod, N, exec, /home/karimkandil/.dotfiles/config/hypr/skip-wallpaper.sh
