--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,16 +7,16 @@ monitor=HDMI-A-1,1366x768,0x0,1
 monitor=DVI-D-1,1024x768,1366x0,1
 
 # Assign workspaces to specific monitors
-workspace=HDMI-A-1,1
-workspace=DVI-D-1,2
-workspace=HDMI-A-1,3
-workspace=DVI-D-1,4
-workspace=HDMI-A-1,5
-workspace=DVI-D-1,6
-workspace=HDMI-A-1,7
-workspace=DVI-D-1,8
-workspace=HDMI-A-1,9
-workspace=DVI-D-1,10
+workspace=1,monitor:HDMI-A-1
+workspace=2,monitor:DVI-D-1
+workspace=3,monitor:HDMI-A-1
+workspace=4,monitor:DVI-D-1
+workspace=5,monitor:HDMI-A-1
+workspace=6,monitor:DVI-D-1
+workspace=7,monitor:HDMI-A-1
+workspace=8,monitor:DVI-D-1
+workspace=9,monitor:HDMI-A-1
+workspace=10,monitor:DVI-D-1
 
 
 ########################################
@@ -37,7 +37,6 @@ $editor =  zeditor
 ########################################
 # exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.dotfiles/config/hypr/walstart.sh &
 
 
