--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ $terminal = kitty
 $fileManager = xplr
 $browser = zen
 $steam = steam
-$menu = rofi -show drun
+$menu = wofi
 $editor =  zeditor
 
 
@@ -156,7 +156,7 @@ master {
 ########################################
 misc {
     force_default_wallpaper = -1
-    disable_hyprland_logo = false
+    disable_hyprland_logo = true
 }
 
 
@@ -264,6 +264,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ########################################
 
 windowrulev2 = opacity 0.8 0.6, class:^(kitty)$
-windowrulev2 = opacity 0.8 0.6, class:^(zen-beta)$
+windowrulev2 = opacity 0.8 0.6, class:^(org.qutebrowser.qutebrowser)$
 windowrulev2 = opacity 0.8 0.6, class:^(dev.zed.Zed)$
 
