feat: modularize nixos configuration

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ workspace=10,monitor:DVI-D-1
 # PROGRAM SHORTCUT VARIABLES
 # Defines variables for commonly launched applications.
 ########################################
-$terminal = kitty
+$terminal = kitty --hold fastfetch
 $fileManager = xplr
 $browser = zen
 $steam = steam
@@ -191,6 +191,7 @@ device {
 $mainMod = SUPER
 
 bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, W, exec, kitty -e nmtui
 bind = $mainMod, L, exec, $browser
 bind = $mainMod, BACKSPACE, killactive,
 bind = $mainMod, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
