--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,21 +3,26 @@
 # Detects monitors automatically and sets
 # preferred resolution, refresh rate, and position.
 ########################################
-monitor=HDMI-A-1,1366x768,0x0,1
-monitor=DVI-D-1,1024x768,1366x0,1
+monitor=DVI-D-1,1024x768,0x0,1
+monitor=HDMI-A-1,1366x768,1024x0,1
+monitor=DP-1,1920x1080,2390x0,1,transform,1
 
-# Assign workspaces to specific monitors
-workspace=1,monitor:HDMI-A-1
-workspace=2,monitor:DVI-D-1
-workspace=3,monitor:HDMI-A-1
-workspace=4,monitor:DVI-D-1
-workspace=5,monitor:HDMI-A-1
-workspace=6,monitor:DVI-D-1
-workspace=7,monitor:HDMI-A-1
-workspace=8,monitor:DVI-D-1
-workspace=9,monitor:HDMI-A-1
-workspace=10,monitor:DVI-D-1
+########################################
+# WORKSPACE RULES
+# Assigns workspaces to specific monitors.
+########################################
+workspace = 2, monitor:HDMI-A-1, default:true
+workspace = 5, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
 
+workspace = 3, monitor:DP-1, default:true
+workspace = 6, monitor:DP-1
+workspace = 9, monitor:DP-1
+
+workspace = 1, monitor:DVI-D-1, default:true
+workspace = 4, monitor:DVI-D-1
+workspace = 7, monitor:DVI-D-1
+workspace = 10, monitor:DVI-D-1
 
 ########################################
 # PROGRAM SHORTCUT VARIABLES
@@ -76,7 +81,7 @@ general {
 
     resize_on_border = false
     allow_tearing = false
-    layout = dwindle
+    layout = master
 }
 
 
@@ -87,20 +92,20 @@ decoration {
     rounding = 5
     rounding_power = 1
 
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.8
+    inactive_opacity = 0.6
 
     shadow {
         enabled = true
         range = 4
-        render_power = 3
+        render_power = 5
         color = rgba(1a1a1aee)
     }
 
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 6
+        passes = 2
         vibrancy = 0.1696
     }
 }
@@ -111,7 +116,7 @@ decoration {
 # Controls easing curves, speeds, and styles.
 ########################################
 animations {
-    enabled = yes, please :)
+    enabled = yes
 
     bezier = easeOutQuint,   0.23, 1,    0.32, 1
     bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
@@ -201,7 +206,7 @@ bind = $mainMod, O, exec, $editor
 bind = $mainMod, F, fullscreen
 bind = $mainMod, V, togglefloating
 bind = $mainMod, M, exec, $menu
-bind = $mainMod, P, pseudo,
+bind = $mainMod, I, pseudo,
 bind = $mainMod, J, togglesplit,
 
 # Skip to next wallpaper
@@ -210,6 +215,7 @@ bind = $mainMod, N, exec, /home/karimkandil/.dotfiles/config/hypr/skip-wallpaper
 # Switch focus between monitors
 bind = $mainMod, H, focusmonitor, HDMI-A-1
 bind = $mainMod, semicolon, focusmonitor, DVI-D-1
+bind = $mainMod, P, focusmonitor, DP-1
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -266,5 +272,4 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 windowrulev2 = opacity 0.8 0.6, class:^(kitty)$
 windowrulev2 = opacity 0.8 0.6, class:^(org.qutebrowser.qutebrowser)$
-windowrulev2 = opacity 0.8 0.6, class:^(dev.zed.Zed)$
-
+windowrulev2 = opacity 0.9 0.8, class:^(dev.zed.Zed)$
